# pyfoxpro

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: release-latest.md
pyfoxpro/: __main__.py  foxpro.py  main.py
