[tool.poetry]
name = "pyfoxpro"
version = "0.1.0"
description = "CLI для выполнения различных полезных команд с проектами, написанными на Visual FoxPro."
authors = ["Ihar Kamarets <i.komarec@sbyt.gomel.energo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbf = "^0.99.3"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
pyfoxpro = "pyfoxpro.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
