[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfoxpro"
version = "0.3.9"
description = "CLI для выполнения различных полезных команд с проектами, написанными на Visual FoxPro."
authors = [{name = "Ihar Kamarets", email = "i.komarec@sbyt.gomel.energo.net"}]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "dbf",
    "typer[all]"
]

[project.scripts]
pyfoxpro = "pyfoxpro.main:app"
